# loom

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md
.github/workflows/: release.yml
assets/: example-directory.ldif
crates/loom-browser/: Cargo.toml
crates/loom-browser/src/: main.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: bulk.rs  config.rs  connection.rs  credentials.rs  error.rs  filter.rs  lib.rs  modify.rs  offline.rs  schema.rs  search.rs  server_detect.rs  util.rs
crates/loom-core/src/export/: csv.rs  json.rs  ldif.rs  mod.rs  xlsx.rs
crates/loom-core/src/import/: csv.rs  ldif.rs
crates/loom-core/tests/: import_export.rs
crates/loom-gui/: Cargo.toml
crates/loom-gui/src/: lib.rs
crates/loom-gui/tests/: integration.rs
crates/loom-gui/ui/: connect-dialog.slint  credential-dialog.slint  detail-panel.slint  export-dialog.slint  main.slint  profile-dialog.slint  profile-sidebar.slint  search-dialog.slint  status-bar.slint  tab-bar.slint  theme-selector.slint  theme.slint  tree-view.slint  vault-dialog.slint
crates/loom-ldapbrowser/: Cargo.toml
crates/loom-ldapbrowser/src/: main.rs
crates/loom-tui/: Cargo.toml
crates/loom-tui/src/: action.rs  app.rs  config.rs  event.rs  focus.rs  keymap.rs  theme.rs
crates/loom-tui/src/components/: about_popup.rs  attribute_picker.rs  command_panel.rs  connect_dialog.rs  mod.rs  (+17 more)
crates/loom/src/: main.rs
docs/: context-menu-plan.md
docs/plans/: 2026-03-21-graphical-ui-design.md  2026-03-21-graphical-ui-plan.md  2026-03-21-profile-sidebar-design.md  2026-03-21-profile-sidebar-plan.md
